@@ -40,7 +40,7 @@
    "provides" : {
       "Config::Model::Backend::Augeas" : {
          "file" : "lib/Config/Model/Backend/Augeas.pm",
-         "version" : "0.113"
+         "version" : "0.114"
       }
    },
    "release_status" : "stable",
@@ -49,5 +49,5 @@
          "http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt"
       ]
    },
-   "version" : "0.113"
+   "version" : "0.114"
 }
